회원 가입 및 로그인 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+##openai api key ??
 openai.api.key=
+##llm_db?? db ??? ?? ? ??? ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/llm_db
 spring.datasource.driver-class-Name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=
+##?? postgres ???? ??
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
