--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/llm_db
 spring.datasource.driver-class-Name=org.postgresql.Driver
 spring.datasource.username=postgres
 ##?? postgres ???? ??
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
